@@ -17175,8 +17175,9 @@ integer:
   {
 	if (cb_tree_category ($1) != CB_CATEGORY_NUMERIC
 	 || !CB_LITERAL_P($1)
-	 || CB_LITERAL ($1)->sign
-	 || CB_LITERAL ($1)->scale) {
+	 || CB_LITERAL ($1)->scale
+	 || CB_LITERAL ($1)->sign < 0 
+	 || (current_report == NULL && CB_LITERAL ($1)->sign)) {
 		cb_error (_("unsigned integer value expected"));
 		$$ = cb_build_numeric_literal(-1, "1", 0);
 	} else {
